# visions

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Demo.ipynb  Dev Notebook.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Untitled.ipynb  make.bat  mypy.ini  pyproject.toml  pytest.ini  report_dev.ipynb  requirements-development.txt  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  ci_requirements.txt  codeql.yml  pypi.yml  tests.yml
archive/templates/: column_overview.html  frequency_table.html  html_wrapper.html  list_composition.html
docs/: .buildinfo  Makefile  README.html  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/source/: conf.py  (+6 more)
docsrc/: Makefile  _config.yml  make.bat  setup.sh
examples/: census.py  colors.py  country_code_type_example.py  declarative_typeset.py  ml_problem_example.py  nza.py  rdw_parking_spots.py  rdw_vehicles.py  titanic.ipynb  titanic.py  websites.py
notebooks/: Containers.ipynb  Demo.ipynb  Demo.py  Dev Notebook.ipynb  Untitled.ipynb  report_dev.ipynb  summarize_strings.py  temp.csv  titanic.ipynb  typesets.py
paper/: paper.bib  paper.md
playground/: Bool.py  Timings.ipynb  custom_dtype.py  downcast_float.py  downcast_integer.py  downcast_nullable_integer.py  rdw_vehicles.py  temp.py  tenzing_bool_option.py  timings.py  titanic_memory.py
plots/: plot_summary.py
src/: temp_ml.py
tests/: conftest.py  series.py  series_sparse.py  test_complete_set.py  test_contains.py  test_copy.py  test_core_functional.py  test_declarative.py  test_dtype_boolean.py  test_functional.py  test_inference.py  test_measurement_level_set.py  test_root.py  test_summarization.py  test_summary_functional.py  test_type_casting.py  test_type_convert.py  test_type_evolve.py  test_type_inference.py  test_type_property.py  test_typeset_external_type.py  test_typesets.py  timings.py  utils.py
typesets/: typeset_complete_base.json
(+1824 files in other folders)
